--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4cc94c5e-b238-4843-81e3-2a2158c9e84d",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "id": "619d92c1-802e-40bc-a8b8-54d57424e6a7",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "id": "271a2239-34cd-4810-b4e5-67374ec6d472",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "id": "27f2c439-d628-42f5-bd30-888490de8c12",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "id": "1f554cde-8f31-417b-8cfc-a88be1fbfc77",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 14,
    "id": "d6f8ee7e-8e67-49a6-bac0-1f98ee0c81e4",
    "metadata": {},
    "outputs": [],
@@ -206,14 +206,14 @@
     "    t = t.lower()\n",
     "    t = ''.join(t.split())\n",
     "    try:\n",
-    "        aviscorpus[t] = dh.Corpus(title = t, limit = 100000)\n",
+    "        aviscorpus[t] = dh.Corpus(title = t,doctype='digavis', limit = 100000)\n",
     "    except:\n",
     "        print(t)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "id": "311fe0d0-db43-4d79-a680-13acebf00956",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "id": "ad4aeb21-f04e-4b61-8e69-bc7e672b5050",
    "metadata": {},
    "outputs": [],
@@ -233,18 +233,350 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 11,
+   "id": "1308ea7a-70a6-418f-824a-4a5b321e47b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dhlabid</th>\n",
+       "      <th>urn</th>\n",
+       "      <th>title</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>oaiid</th>\n",
+       "      <th>sesamid</th>\n",
+       "      <th>isbn10</th>\n",
+       "      <th>city</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>year</th>\n",
+       "      <th>publisher</th>\n",
+       "      <th>langs</th>\n",
+       "      <th>subjects</th>\n",
+       "      <th>ddc</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>literaryform</th>\n",
+       "      <th>doctype</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>201163304.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_nordisktidende_null_null...</td>\n",
+       "      <td>nordisktidende</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>19070228.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>digavis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>201162554.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_nordisktidende_null_null...</td>\n",
+       "      <td>nordisktidende</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>18960508.0</td>\n",
+       "      <td>1896.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>digavis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>201162965.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_nordisktidende_null_null...</td>\n",
+       "      <td>nordisktidende</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>19000927.0</td>\n",
+       "      <td>1900.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>digavis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>202576273.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_nordisktidende_null_null...</td>\n",
+       "      <td>nordisktidende</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>19921001.0</td>\n",
+       "      <td>1992.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>digavis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>201164071.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_nordisktidende_null_null...</td>\n",
+       "      <td>nordisktidende</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>19211215.0</td>\n",
+       "      <td>1921.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>digavis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>643</th>\n",
+       "      <td>202881106.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_westernviking_null_null_...</td>\n",
+       "      <td>westernviking</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>19630628.0</td>\n",
+       "      <td>1963.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>digavis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>644</th>\n",
+       "      <td>203464053.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_westernviking_null_null_...</td>\n",
+       "      <td>westernviking</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>19710226.0</td>\n",
+       "      <td>1971.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>digavis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>645</th>\n",
+       "      <td>202881081.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_westernviking_null_null_...</td>\n",
+       "      <td>westernviking</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>19630104.0</td>\n",
+       "      <td>1963.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>digavis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>646</th>\n",
+       "      <td>202881137.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_westernviking_null_null_...</td>\n",
+       "      <td>westernviking</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>19640214.0</td>\n",
+       "      <td>1964.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>digavis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>647</th>\n",
+       "      <td>202881054.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_westernviking_null_null_...</td>\n",
+       "      <td>westernviking</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>19620615.0</td>\n",
+       "      <td>1962.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>digavis</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16595 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         dhlabid                                                urn  \\\n",
+       "0    201163304.0  URN:NBN:no-nb_digavis_nordisktidende_null_null...   \n",
+       "1    201162554.0  URN:NBN:no-nb_digavis_nordisktidende_null_null...   \n",
+       "2    201162965.0  URN:NBN:no-nb_digavis_nordisktidende_null_null...   \n",
+       "3    202576273.0  URN:NBN:no-nb_digavis_nordisktidende_null_null...   \n",
+       "4    201164071.0  URN:NBN:no-nb_digavis_nordisktidende_null_null...   \n",
+       "..           ...                                                ...   \n",
+       "643  202881106.0  URN:NBN:no-nb_digavis_westernviking_null_null_...   \n",
+       "644  203464053.0  URN:NBN:no-nb_digavis_westernviking_null_null_...   \n",
+       "645  202881081.0  URN:NBN:no-nb_digavis_westernviking_null_null_...   \n",
+       "646  202881137.0  URN:NBN:no-nb_digavis_westernviking_null_null_...   \n",
+       "647  202881054.0  URN:NBN:no-nb_digavis_westernviking_null_null_...   \n",
+       "\n",
+       "              title authors oaiid sesamid isbn10  city   timestamp    year  \\\n",
+       "0    nordisktidende    None  None    None   None  None  19070228.0  1907.0   \n",
+       "1    nordisktidende    None  None    None   None  None  18960508.0  1896.0   \n",
+       "2    nordisktidende    None  None    None   None  None  19000927.0  1900.0   \n",
+       "3    nordisktidende    None  None    None   None  None  19921001.0  1992.0   \n",
+       "4    nordisktidende    None  None    None   None  None  19211215.0  1921.0   \n",
+       "..              ...     ...   ...     ...    ...   ...         ...     ...   \n",
+       "643   westernviking    None  None    None   None  None  19630628.0  1963.0   \n",
+       "644   westernviking    None  None    None   None  None  19710226.0  1971.0   \n",
+       "645   westernviking    None  None    None   None  None  19630104.0  1963.0   \n",
+       "646   westernviking    None  None    None   None  None  19640214.0  1964.0   \n",
+       "647   westernviking    None  None    None   None  None  19620615.0  1962.0   \n",
+       "\n",
+       "    publisher langs subjects   ddc genres literaryform  doctype  \n",
+       "0        None  None     None  None   None         None  digavis  \n",
+       "1        None  None     None  None   None         None  digavis  \n",
+       "2        None  None     None  None   None         None  digavis  \n",
+       "3        None  None     None  None   None         None  digavis  \n",
+       "4        None  None     None  None   None         None  digavis  \n",
+       "..        ...   ...      ...   ...    ...          ...      ...  \n",
+       "643      None  None     None  None   None         None  digavis  \n",
+       "644      None  None     None  None   None         None  digavis  \n",
+       "645      None  None     None  None   None         None  digavis  \n",
+       "646      None  None     None  None   None         None  digavis  \n",
+       "647      None  None     None  None   None         None  digavis  \n",
+       "\n",
+       "[16595 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tot[tot.doctype=='digavis']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "bf62642f-2391-4361-9182-13eb509e506d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tot[\"dhlabid urn title doctype timestamp year\".split()].to_csv(\"norske_aviser.csv\")"
+    "tot[tot.doctype=='digavis'][\"dhlabid urn title doctype timestamp year\".split()].to_csv(\"norske_aviser.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "855e18cf-32ad-461f-babb-7434993e6113",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -258,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
