--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -165,6 +165,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "fc4b0fe9-0552-4752-8dec-df0d5d49e352",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avistitler = \"\"\"Amerika (1884-1885) urn.nb.no/URN:NBN:no-nb_digavis_amerikaamerica_null_null_18850429_1_17_1\n",
+    "\n",
+    "Fremad (1896-1931) urn.nb.no/URN:NBN:no-nb_digavis_fremadusa_null_null_19160525_23_3_1\n",
+    "\n",
+    "Norgesposten (1924-33) URN:NBN:no-nb_digavis_norgespostenbrooklyn_null_null_19240522_1_3_1\n",
+    "\n",
+    "Normanden (1940-1945) urn.nb.no/URN:NBN:no-nb_digavis_normanden_null_null_19400815_54_33_1 \n",
+    "\n",
+    "Norrøna (1935-84) urn.nb.no/URN:NBN:no-nb_digavis_norroena_null_null_19351219_26_51_1 \n",
+    "\n",
+    "Reform (1936-41) urn.nb.no/URN:NBN:no-nb_digavis_reformusa_null_null_19360130_51_5_1\n",
+    "\n",
+    "Vinland (1958-87) urn.nb.no/URN:NBN:no-nb_digavis_vinland_null_null_19580925_1_2_1 \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "271a2239-34cd-4810-b4e5-67374ec6d472",
    "metadata": {},
@@ -185,7 +207,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
+   "id": "db7d160e-df55-4889-b92b-80507ec04934",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avistitler_navn = re.findall(\"digavis_([a-z]+)_null\", avistitler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "1f554cde-8f31-417b-8cfc-a88be1fbfc77",
    "metadata": {},
    "outputs": [],
@@ -195,16 +227,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
+   "id": "5e23b24e-a723-460d-9714-09b7a61b5d3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aviser = [x[0] for x in avis] + avistitler_navn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "d6f8ee7e-8e67-49a6-bac0-1f98ee0c81e4",
    "metadata": {},
    "outputs": [],
    "source": [
     "aviscorpus = dict()\n",
-    "for t, fy, ty in avis:\n",
-    "    t = t.strip()\n",
-    "    t = t.lower()\n",
-    "    t = ''.join(t.split())\n",
+    "for t in aviser:\n",
     "    try:\n",
     "        aviscorpus[t] = dh.Corpus(title = t,doctype='digavis', limit = 100000)\n",
     "    except:\n",
@@ -213,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "311fe0d0-db43-4d79-a680-13acebf00956",
    "metadata": {},
    "outputs": [],
@@ -223,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "ad4aeb21-f04e-4b61-8e69-bc7e672b5050",
    "metadata": {},
    "outputs": [],
@@ -233,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "1308ea7a-70a6-418f-824a-4a5b321e47b3",
    "metadata": {},
    "outputs": [
@@ -280,16 +319,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>201163304.0</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_nordisktidende_null_null...</td>\n",
-       "      <td>nordisktidende</td>\n",
+       "      <td>202685250.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_reformusa_null_null_1939...</td>\n",
+       "      <td>reformusa</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>19070228.0</td>\n",
-       "      <td>1907.0</td>\n",
+       "      <td>19391012.0</td>\n",
+       "      <td>1939.0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -300,16 +339,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>201162554.0</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_nordisktidende_null_null...</td>\n",
-       "      <td>nordisktidende</td>\n",
+       "      <td>202685076.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_reformusa_null_null_1936...</td>\n",
+       "      <td>reformusa</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>18960508.0</td>\n",
-       "      <td>1896.0</td>\n",
+       "      <td>19360611.0</td>\n",
+       "      <td>1936.0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -320,16 +359,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>201162965.0</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_nordisktidende_null_null...</td>\n",
-       "      <td>nordisktidende</td>\n",
+       "      <td>202685213.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_reformusa_null_null_1939...</td>\n",
+       "      <td>reformusa</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>19000927.0</td>\n",
-       "      <td>1900.0</td>\n",
+       "      <td>19390126.0</td>\n",
+       "      <td>1939.0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -340,16 +379,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>202576273.0</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_nordisktidende_null_null...</td>\n",
-       "      <td>nordisktidende</td>\n",
+       "      <td>202685208.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_reformusa_null_null_1938...</td>\n",
+       "      <td>reformusa</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>19921001.0</td>\n",
-       "      <td>1992.0</td>\n",
+       "      <td>19381222.0</td>\n",
+       "      <td>1938.0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -360,16 +399,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>201164071.0</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_nordisktidende_null_null...</td>\n",
-       "      <td>nordisktidende</td>\n",
+       "      <td>202685273.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_reformusa_null_null_1941...</td>\n",
+       "      <td>reformusa</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>19211215.0</td>\n",
-       "      <td>1921.0</td>\n",
+       "      <td>19410116.0</td>\n",
+       "      <td>1941.0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -399,37 +438,17 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>643</th>\n",
-       "      <td>202881106.0</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_westernviking_null_null_...</td>\n",
-       "      <td>westernviking</td>\n",
+       "      <th>241</th>\n",
+       "      <td>202685178.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_reformusa_null_null_1938...</td>\n",
+       "      <td>reformusa</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>19630628.0</td>\n",
-       "      <td>1963.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>digavis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>644</th>\n",
-       "      <td>203464053.0</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_westernviking_null_null_...</td>\n",
-       "      <td>westernviking</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>19710226.0</td>\n",
-       "      <td>1971.0</td>\n",
+       "      <td>19380526.0</td>\n",
+       "      <td>1938.0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -439,37 +458,17 @@
        "      <td>digavis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>645</th>\n",
-       "      <td>202881081.0</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_westernviking_null_null_...</td>\n",
-       "      <td>westernviking</td>\n",
+       "      <th>242</th>\n",
+       "      <td>202685274.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_reformusa_null_null_1941...</td>\n",
+       "      <td>reformusa</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>19630104.0</td>\n",
-       "      <td>1963.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>digavis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>646</th>\n",
-       "      <td>202881137.0</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_westernviking_null_null_...</td>\n",
-       "      <td>westernviking</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>19640214.0</td>\n",
-       "      <td>1964.0</td>\n",
+       "      <td>19410123.0</td>\n",
+       "      <td>1941.0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -479,17 +478,57 @@
        "      <td>digavis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>647</th>\n",
-       "      <td>202881054.0</td>\n",
-       "      <td>URN:NBN:no-nb_digavis_westernviking_null_null_...</td>\n",
-       "      <td>westernviking</td>\n",
+       "      <th>243</th>\n",
+       "      <td>202685064.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_reformusa_null_null_1936...</td>\n",
+       "      <td>reformusa</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>19620615.0</td>\n",
-       "      <td>1962.0</td>\n",
+       "      <td>19360312.0</td>\n",
+       "      <td>1936.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>digavis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>244</th>\n",
+       "      <td>202685267.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_reformusa_null_null_1940...</td>\n",
+       "      <td>reformusa</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>19401205.0</td>\n",
+       "      <td>1940.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>digavis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>245</th>\n",
+       "      <td>202685109.0</td>\n",
+       "      <td>URN:NBN:no-nb_digavis_reformusa_null_null_1937...</td>\n",
+       "      <td>reformusa</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>19370128.0</td>\n",
+       "      <td>1937.0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -500,35 +539,35 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>16595 rows × 17 columns</p>\n",
+       "<p>246 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "         dhlabid                                                urn  \\\n",
-       "0    201163304.0  URN:NBN:no-nb_digavis_nordisktidende_null_null...   \n",
-       "1    201162554.0  URN:NBN:no-nb_digavis_nordisktidende_null_null...   \n",
-       "2    201162965.0  URN:NBN:no-nb_digavis_nordisktidende_null_null...   \n",
-       "3    202576273.0  URN:NBN:no-nb_digavis_nordisktidende_null_null...   \n",
-       "4    201164071.0  URN:NBN:no-nb_digavis_nordisktidende_null_null...   \n",
+       "0    202685250.0  URN:NBN:no-nb_digavis_reformusa_null_null_1939...   \n",
+       "1    202685076.0  URN:NBN:no-nb_digavis_reformusa_null_null_1936...   \n",
+       "2    202685213.0  URN:NBN:no-nb_digavis_reformusa_null_null_1939...   \n",
+       "3    202685208.0  URN:NBN:no-nb_digavis_reformusa_null_null_1938...   \n",
+       "4    202685273.0  URN:NBN:no-nb_digavis_reformusa_null_null_1941...   \n",
        "..           ...                                                ...   \n",
-       "643  202881106.0  URN:NBN:no-nb_digavis_westernviking_null_null_...   \n",
-       "644  203464053.0  URN:NBN:no-nb_digavis_westernviking_null_null_...   \n",
-       "645  202881081.0  URN:NBN:no-nb_digavis_westernviking_null_null_...   \n",
-       "646  202881137.0  URN:NBN:no-nb_digavis_westernviking_null_null_...   \n",
-       "647  202881054.0  URN:NBN:no-nb_digavis_westernviking_null_null_...   \n",
+       "241  202685178.0  URN:NBN:no-nb_digavis_reformusa_null_null_1938...   \n",
+       "242  202685274.0  URN:NBN:no-nb_digavis_reformusa_null_null_1941...   \n",
+       "243  202685064.0  URN:NBN:no-nb_digavis_reformusa_null_null_1936...   \n",
+       "244  202685267.0  URN:NBN:no-nb_digavis_reformusa_null_null_1940...   \n",
+       "245  202685109.0  URN:NBN:no-nb_digavis_reformusa_null_null_1937...   \n",
        "\n",
-       "              title authors oaiid sesamid isbn10  city   timestamp    year  \\\n",
-       "0    nordisktidende    None  None    None   None  None  19070228.0  1907.0   \n",
-       "1    nordisktidende    None  None    None   None  None  18960508.0  1896.0   \n",
-       "2    nordisktidende    None  None    None   None  None  19000927.0  1900.0   \n",
-       "3    nordisktidende    None  None    None   None  None  19921001.0  1992.0   \n",
-       "4    nordisktidende    None  None    None   None  None  19211215.0  1921.0   \n",
-       "..              ...     ...   ...     ...    ...   ...         ...     ...   \n",
-       "643   westernviking    None  None    None   None  None  19630628.0  1963.0   \n",
-       "644   westernviking    None  None    None   None  None  19710226.0  1971.0   \n",
-       "645   westernviking    None  None    None   None  None  19630104.0  1963.0   \n",
-       "646   westernviking    None  None    None   None  None  19640214.0  1964.0   \n",
-       "647   westernviking    None  None    None   None  None  19620615.0  1962.0   \n",
+       "         title authors oaiid sesamid isbn10  city   timestamp    year  \\\n",
+       "0    reformusa    None  None    None   None  None  19391012.0  1939.0   \n",
+       "1    reformusa    None  None    None   None  None  19360611.0  1936.0   \n",
+       "2    reformusa    None  None    None   None  None  19390126.0  1939.0   \n",
+       "3    reformusa    None  None    None   None  None  19381222.0  1938.0   \n",
+       "4    reformusa    None  None    None   None  None  19410116.0  1941.0   \n",
+       "..         ...     ...   ...     ...    ...   ...         ...     ...   \n",
+       "241  reformusa    None  None    None   None  None  19380526.0  1938.0   \n",
+       "242  reformusa    None  None    None   None  None  19410123.0  1941.0   \n",
+       "243  reformusa    None  None    None   None  None  19360312.0  1936.0   \n",
+       "244  reformusa    None  None    None   None  None  19401205.0  1940.0   \n",
+       "245  reformusa    None  None    None   None  None  19370128.0  1937.0   \n",
        "\n",
        "    publisher langs subjects   ddc genres literaryform  doctype  \n",
        "0        None  None     None  None   None         None  digavis  \n",
@@ -537,27 +576,27 @@
        "3        None  None     None  None   None         None  digavis  \n",
        "4        None  None     None  None   None         None  digavis  \n",
        "..        ...   ...      ...   ...    ...          ...      ...  \n",
-       "643      None  None     None  None   None         None  digavis  \n",
-       "644      None  None     None  None   None         None  digavis  \n",
-       "645      None  None     None  None   None         None  digavis  \n",
-       "646      None  None     None  None   None         None  digavis  \n",
-       "647      None  None     None  None   None         None  digavis  \n",
+       "241      None  None     None  None   None         None  digavis  \n",
+       "242      None  None     None  None   None         None  digavis  \n",
+       "243      None  None     None  None   None         None  digavis  \n",
+       "244      None  None     None  None   None         None  digavis  \n",
+       "245      None  None     None  None   None         None  digavis  \n",
        "\n",
-       "[16595 rows x 17 columns]"
+       "[246 rows x 17 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tot[tot.doctype=='digavis']"
+    "tot[tot.doctype=='digavis'][tot.title == 'reformusa']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "bf62642f-2391-4361-9182-13eb509e506d",
    "metadata": {},
    "outputs": [],
